--- a/style.css
+++ b/style.css
@@ -1,2 +1,12 @@
 /*Google fontnya*/
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Roboto", sans-serif;
+}
+.logo img {
+    width: 48px;
+}
