--- a/style.css
+++ b/style.css
@@ -10,3 +10,13 @@
 .logo img {
     width: 48px;
 }
+.header .chip {
+    width: 60px;
+}
+body {
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #f3cb51;
+}
