--- a/style.css
+++ b/style.css
@@ -18,5 +18,14 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #f3cb51;
+    background-color: #312f2f;
+}
+.container {
+    position: relative;
+    background-color: #fff;
+    padding: 25px;
+    border-radius: 28px;
+    max-width: 380px;
+    width: 100%;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 }
